# advent-of-code-2025

./: .gitignore  README.md  days 01-06.ipynb  days 07-12.ipynb  pyproject.toml
